Dashboard with map

--- a/src/components/CovidMap/CovidMap.css
+++ b/src/components/CovidMap/CovidMap.css
@@ -1,5 +1,4 @@
 .leaflet-container {
-    /* background-color:  rgb(163, 206, 255); */
-    background-color: black;
+    background-color:  rgb(163, 206, 255);
   }
   
