--- a/src/components/Awareness/Awareness.css
+++ b/src/components/Awareness/Awareness.css
@@ -19,8 +19,7 @@ p {
 }
 
 .symptomImg,
-.preventImg,
-.doctorImg {
+.preventImg {
   max-width: 100%;
   height: 300px;
 }
@@ -43,7 +42,8 @@ p {
 }
 
 .panel-head-title a {
-  color: #182030;
+  font-weight: bold;
+  color: white;
   padding: 14px 32px 14px 24px;
   display: block;
 }
@@ -52,4 +52,12 @@ p {
   border-radius: 3px;
   margin-bottom: 16px;
   background: #f5f5f5;
+}
+
+.en {
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.vn {
+    font-family: "Times New Roman", Times, serif;
 }
